Fix size of header - not sticking out
Corrected size of header as it was sticking out of the window's size.
Had to remove all size properties of flexboxes so that page size is not
greater than window size.

Also formatted header so that it looks similar to image via padding.

--- a/style.css
+++ b/style.css
@@ -1,10 +1,4 @@
-body {
-    width:100%;
-    height:100%;
-}
-
 .top {
-    width:100%;
     height:300px;
     border:5px solid green;
     background-color:#1f2937;
@@ -12,18 +6,15 @@ body {
 }
 
 header {
-    
 }
 
 .header_links {
     height:20px;
-    width:100%;
     display:flex;
     justify-content:flex-end;
-    background-color:yellow;
     gap:20px;
     position:relative;
-    margin:10px 50px;
+    padding: 10px 50px;
 }
 
 .logo {
